--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MeXcal</title>
 
     <link rel="shortcut icon" href="/media/mexcal.jpeg">
-    <link rel="stylesheet" href="../css/ideaAscona.css">
+    <link rel="stylesheet" href="/css/ideaAscona.css">
     <link rel="stylesheet" href="animate-wow/animate.min.css">
     <script src="https://use.fontawesome.com/b29ce011be.js"></script>
 
